# MLOPs_project_breast_cancer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BACKLOG.md  Dockerfile  MODEL_CARD.md  README.md  ROADMAP.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  api.py  main.py  metrics.py  model_service.py  prediction_logger.py  schemas.py
artifacts/: mlflow_run_id.txt
deploy/k8s/: README.md  deployment.yaml  hpa.yaml  service.yaml
deploy/monitoring/: prometheus.yml
deploy/monitoring/grafana/dashboards/: model-serving.json
docs/adr/: 0001-dvc-como-orquestrador.md  0002-fastapi-no-lugar-de-flask.md  0003-mlflow-nao-wandb.md  0004-threshold-como-parametro-de-negocio.md  0005-sem-feature-store.md
docs/diario/: README.md  fase0-item01-runtime-python.md  fase0-item02-03-leakage-e-corretude.md  fase0-item04-paths-e-params.md  fase0-item05-logging.md  fase1-item06-dvc.md  fase1-item07-pandera.md  fase1-item08-testes.md  fase1-item09-ci.md  fase2-item10-mlflow.md  fase2-item11-baselines.md  fase2-item12-avaliacao-clinica.md  fase2-item13-explicabilidade.md  fase3-item15-16-fastapi.md  fase3-item17-estrategias-deploy.md  fase4-item18-21-docker-k8s-cd.md  fase5-item22-24-monitoramento.md  fase5-item25-avaliacao-em-producao.md  fase6-item27-28-readme-adrs.md
docs/prompts/: 01-validar-k8s-kind.md  02-gatilho-retraining.md  03-screenshots-readme.md
metrics/: .gitignore  baselines.json  evaluation.json  training.json
src/: __init__.py
src/config/: __init__.py  features.py  logging_config.py  params.py  paths.py  tracking.py
src/data_loading/: load_data.py
src/data_preprocessing/: preprocess_data.py
src/data_validation/: schemas.py
src/feature_engineering/: engineer_features.py
src/model_evaluation/: evaluate_model.py  explain_model.py
src/model_training/: train_baselines.py  train_model.py
src/monitoring/: drift_report.py
tests/: test_api.py  test_model_service.py  test_no_leakage.py  test_observability.py  test_pipeline_units.py  test_schemas.py
